--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Flask-MongoDB Example App</title>
+    <title>Cards Temp Name</title>
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <header>
-        <h1>Flask-Pymongo Example App</h1>
+        <h1>Cards Temp Name</h1>
         <nav>
           <a href="{{ url_for('home')}}">Home</a>
         </nav>
@@ -18,11 +18,26 @@
       <main>{% block container %} {% endblock %}</main>
       <footer>
         <p>
-          &copy; 2022. Shared under the GPL3 license. Source code available at
           <a
-            href="https://github.com/nyu-software-engineering/flask-pymongo-web-app-example"
-            >available on Github</a
-          >.
+            href="{{ url_for('pack')}}"
+            >Open Pack</a
+          >
+
+          <a
+          href="{{ url_for('show')}}"
+          >Showcase</a
+          >
+
+          <a
+          href="{{ url_for('exchange')}}"
+          >Exchange</a
+          >
+
+          <a
+          href="{{ url_for('collection')}}"
+          >View Collection</a
+          >
+
         </p>
       </footer>
     </div>
