commented out code

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,16 +17,14 @@
       </header>
       <main>{% block container %} {% endblock %}</main>
       <footer>
+        <!--
         <p>
           <a
             href="{{ url_for('pack')}}"
-            >Open Pack</a
-          >
-
+            >Open Pack</a>
           <a
           href="{{ url_for('show')}}"
-          >Showcase</a
-          >
+          >Showcase</a>
 
           <a
           href="{{ url_for('exchange')}}"
@@ -40,6 +38,7 @@
 
         </p>
       </footer>
+      -->
     </div>
   </body>
 </html>
