--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cards Temp Name</title>
+    <title>Gif Cards</title>
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <header>
-        <h1>Cards Temp Name</h1>
+        <h1>Gif Cards</h1>
         <nav>
           <a href="{{ url_for('home')}}">Home</a>
         </nav>
