--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
       <header>
         <h1>Gif Cards</h1>
         <nav>
-          <a href="{{ url_for('home')}}">Home</a>
+          <a href="{{ url_for('open_pack')}}">Home</a>
         </nav>
       </header>
       <main>{% block container %} {% endblock %}</main>
