login and sign up working

--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
         <input type="text" name="username"><br>
         Password: <br>
         <input type="password" name="password"><br>
-        <input type="submit" value="Login" >
+        <input type="submit" value="Log In" >
     </form>
     <a href="{{ url_for('signup')}}">Dont have an account yet? Sign Up</a>
 
