--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,7 +6,7 @@
         <input type="text" name="username"><br>
         Password: <br>
         <input type="password" name="password"><br>
-        <input type="submit" value="Login" >
+        <input type="submit" value="Sign Up" >
     </form>
     <a href="{{ url_for('login')}}">Already Have an account? Log In!</a>
     
