--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,14 +1,17 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} 
+
 {% block container %}
-    <h1>Sign Up!</h1>
-    <form method="POST" action ="">
-        Username: <br>
-        <input type="text" name="username"><br>
-        Password: <br>
-        <input type="password" name="password"><br>
-        <input type="submit" value="Sign Up" >
-    </form>
-    <a href="{{ url_for('login')}}">Already Have an account? Log In!</a>
-    
+
+<h2>Create an account</h2>
+<p>
+  Already have an account? <a href="{{ url_for('login') }}">Log in</a>!
+</p>  
+<form action="{{ url_for('signup_submit') }}" method="POST">
+  <input type="email" name="email" id="email" placeholder="email" />
+  <br />
+  <input type="password" name="password" id="password" placeholder="password" />
+  <br />
+  <input type="submit" name="submit" value="Sign up" />
+</form>
 
 {% endblock %}
