--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Flask-MongoDB Example App</title>
+    <title>Gif Cards</title>
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
@@ -10,12 +10,12 @@
   <body>
     <div class="container">
       <header>
-        <h1>Flask-Pymongo Example App</h1>
-        {% include '_main_nav.html' %}
+        <h1>Gif Cards</h1>
       </header>
       {% include '_flash_messages.html' %}
       <main>{% block container %} {% endblock %}</main>
       <footer>
+        {% include '_main_nav.html' %}
         <p>
           &copy; 2022. Shared under the GPL3 license. Source code available at
           <a
