added footer nav

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,20 +2,18 @@
 <html>
   <head>
     <title>Gif Cards</title>
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/style.css') }}"
-    />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
   </head>
   <body>
     <div class="container">
       <header>
         <h1>Gif Cards</h1>
+        {% include '_main_nav.html' %}
       </header>
       {% include '_flash_messages.html' %}
       <main>{% block container %} {% endblock %}</main>
       <footer>
-        {% include '_main_nav.html' %}
+        {% include 'footer_nav.html' %}
         <p>
           &copy; 2022. Shared under the GPL3 license. Source code available at
           <a
