--- a/templates/open_pack.html
+++ b/templates/open_pack.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 
 {% block container %}
+    <h1>Open Pack!</h1>
     <section id="openPack">
         <div id = "pack">
-            <h2>Mystery Pack</h2>
+            <h2>Mystery Packs</h2>
         </div>
-        <form action="" method="POST">
-            <input type="submit" value="Open!"/>
+        <form action="{{ url_for('card') }}" method="POST">
+            <input id="open" type="submit" value="Open!"/>
         </form>
     </section>
 {% endblock %}
