--- a/static/css/style.css
+++ b/static/css/style.css
@@ -77,3 +77,18 @@ form textarea {
   width: 100px;
   height: 200px;
 }
+
+.card{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid black;
+  border-radius: 5px;
+  width: 100px;
+  height: 200px;
+}
+
+.gif{
+  width:60px;
+  height:60px;
+}
