--- a/templates/card.html
+++ b/templates/card.html
@@ -1,9 +1,15 @@
 {% extends 'base.html' %}
 
 {% block container %}
-    <section id="openedPack">
-        <div id = "pack">
-            <h2>Your Card!</h2>
-        </div>
-    </section>
+<h1>Your Card:</h1>
+<section id="packed_card">
+    <div class="card">
+        <h3>{{card.cardname}}</h3>
+        <img class="gif" src="{{card.url}}"/>
+        <h4>{{card.rarity}}</h4>
+    </div>
+    <h4>
+        {{rarity}}
+    </h4>
+</section>
 {% endblock %}
