--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,11 @@
   font-weight: normal;
 }
 
+@font-face {
+  font-family: customFont;
+  src: url(../fonts/rexlia.ttf);
+}
+
 .container {
   border: 2px solid;
   max-width: 1200px;
@@ -78,17 +83,44 @@ form textarea {
   height: 200px;
 }
 
+
 .card{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 1px solid black;
-  border-radius: 5px;
-  width: 100px;
+  width: 200px;
   height: 200px;
+  background-repeat:no-repeat;
+  background-size:contain;
+  text-align: center;
+  z-index: 100;
+  font-style: normal;
+  font-weight: 400;
+}
+.card h3{
+  text-align: left;
+  left: 45px;
+  position: relative;
+  font-size: smaller;
+  font-family: customFont;
+  top:15%; 
+}
+#legendary{
+  background-image:url('../images/legendary.png');
+  color: rgb(235,132,25);
 }
 
+#epic{
+  color: rgb(146, 73, 218);
+  background-image:url("../images/epic.png");
+}
+#basic{
+  color: rgb(248, 248, 248);
+  background-image:url("../images/basic.png");
+}
+
+
 .gif{
-  width:60px;
-  height:60px;
+  position: relative;
+  top: 20px;
+  width:100px;
+  height:100px;
+  z-index: -1;
 }
