--- a/templates/all_cards.html
+++ b/templates/all_cards.html
@@ -4,10 +4,9 @@
     <h1>All Cards available to pack</h1>
     <section id="collection">
         {% for card in cards %}
-        <div class="card">
+        <div class="card" id="{{card.rarity}}">
             <h3>{{card.cardname}}</h3>
             <img class="gif" src="{{card.url}}"/>
-            <h4>{{card.rarity}}</h4>
         </div>
         {%endfor%}
     </section>
