--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,12 @@
 * {
-  font-family: helvetica;
+  color: white;
+  font-family: 'Courier New', Courier, monospace;
   font-weight: normal;
 }
 
 .container {
-  border: 2px solid;
-  max-width: 1200px;
+  /*border: 2px solid;*/
+  /*max-width: 1200px;*/
   margin: 0 auto;
 }
 
@@ -18,43 +19,32 @@ header {
 }
 
 header,
-footer,
+/*.refs,*/
 main {
   padding: 2rem;
 }
 
-header,
-main {
+header { /*removed main*/
   border-bottom: 2px solid;
   margin-bottom: 5px;
 }
 
-section.posts {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 1rem;
+main {
+
 }
 
-article.post {
-  border: 1px solid black;
-  padding: 1rem;
-}
-article.post.new-post {
-  background-color: #f0f0f0;
-}
-article.post .controls {
-  font-size: 12px;
-}
-article.post .author {
-  font-size: 12px;
-}
-article.post p.message {
-  font-size: 24px;
+/* NEW STUFF (OTHER PEOPLE)*/
+#appname {
+  font-weight: bolder;
+  font-size: 50px;
+  padding: 10px 10px;
+  text-shadow: 1px 1px 10px rgb(0, 247, 255) ;
+  /*box-shadow:0px 0px 10px rgb(0, 247, 255);*/
 }
 
-footer {
-  margin-bottom: 5px;
+#welcome {
+  font-size: large;
+
 }
 
 .flashes p {
@@ -70,25 +60,115 @@ form textarea {
   margin: 10px 0;
 }
 
+.extension {
+  margin-top: 100px;
+}
+
 #pack{
   text-align: center;
   margin: 0px auto;
   border: 1px solid black;
-  width: 100px;
-  height: 200px;
+  /*width: 100px;
+  height: 200px;*/
+
+  /*position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);*/
+
+  width: 25vh;
+  height: 50vh;
+}
+
+.collection {
+  margin: 10px 0px 10px 0px;
 }
 
 .card{
+  background-color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid black;
-  border-radius: 5px;
-  width: 100px;
-  height: 200px;
+  float: left;
+  border: 2px solid rgb(0, 247, 255);
+  box-shadow: 5px white;
+  border-radius: 20px;
+  width: 200px;
+  height: 400px;
+  font-size:larger;
+  margin: 50px;
+  /*font-size: 1vh;
+  margin: 5vw;
+  width: 20vw;
+  height: 40vw;*/
 }
 
 .gif{
-  width:60px;
-  height:60px;
+  /*width:60px;
+  height:60px;*/
+  /*width: 7vh;
+  height: 7vh;*/
+  width: 100px;
+  height: 100px;
+}
+
+/*---------NEW STUFF----------*/
+/*.refs {
+  margin-bottom: 5px;
+}*/
+footer { /*source*/
+  /*height:10vh;*/
+ /* position: fixed;
+  bottom: 10vh;*/
+}
+
+body {
+  background-color: rgb(49, 52, 58);
+  margin:0px 0px 55px 0px;
+  overflow:auto;
+}
+.button {
+  width:100%;
+  padding: 1%;
+  margin: 5px;
+  /*background-color: rgb(174, 209, 229);*/
+  background-color: black;
+  /*----------------------*/
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  display: flex;
+  /*----------------------*/
+  font-family: "Anonymous Pro", monospace;
+  color: white;
+  text-decoration: none;
+  text-shadow: 5px 1px 20px rgb(0, 247, 255) ;
+  font-size: 3.5vw;
+}
+/*.button/*,header*/ /*{
+  background-color: rgb(174, 209, 229); /*NEW ADDITION*/
+/*}*/
+footer/*,header */{
+  width: 100%;
+  height:8vh;
+  display:flex;
+}
+#source {
+  height:10vh;
+  position: fixed;
+  margin-left: 5px;
+  bottom: 0;
+}
+#navBar {
+  width:100%;
+  /*background-color: rgb(138, 167, 184);*/
+  background-color:rgb(34, 34, 34);
+  position: fixed;
+  bottom: 0;
+}
+
+.extension {
+  margin-top: 50px;
+
+  margin-bottom: 50px;
 }
