--- a/templates/all_cards.html
+++ b/templates/all_cards.html
@@ -2,13 +2,15 @@
 
 {% block container %}
     <h1>All Cards available to pack</h1>
-    <section id="collection">
-        {% for card in cards %}
-        <div class="card">
-            <h3>{{card.cardname}}</h3>
-            <img class="gif" src="{{card.url}}"/>
-            <h4>{{card.rarity}}</h4>
-        </div>
-        {%endfor%}
-    </section>
+    <Div class="extension" >
+        <section id="collection">
+            {% for card in cards %}
+            <div class="card">
+                <h3>{{card.cardname}}</h3>
+                <img class="gif" src="{{card.url}}"/>
+                <h4>{{card.rarity}}</h4>
+            </div>
+            {%endfor%}
+        </section>
+    </Div>
 {% endblock %}
