--- a/templates/base.html
+++ b/templates/base.html
@@ -7,14 +7,13 @@
   <body>
     <div class="container">
       <header>
-        <h1>Gif Cards</h1>
+        <h1 id = "appname">Gif Cards</h1>
         {% include '_main_nav.html' %}
       </header>
       {% include '_flash_messages.html' %}
       <main>{% block container %} {% endblock %}</main>
-      <footer>
-        {% include 'footer_nav.html' %}
-        <p>
+      <footer id="source">
+        <p class = "refs">
           &copy; 2022. Shared under the GPL3 license. Source code available at
           <a
             href="https://github.com/nyu-software-engineering/flask-pymongo-web-app-example"
@@ -23,5 +22,6 @@
         </p>
       </footer>
     </div>
+    {% include 'footer_nav.html' %}
   </body>
 </html>
