--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Gif Cards</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
   </head>
   <body>
