--- a/templates/footer_nav.html
+++ b/templates/footer_nav.html
@@ -5,6 +5,7 @@
     <li><a href="{{ url_for('all_cards')}}">All Cards</a></li>
     <li><a href="{{ url_for('exchange')}}">Trade/Gift</a></li>
     <li><a href="{{ url_for('showcase')}}">Showcase</a></li>
+    <li><a href="{{ url_for('my_cards')}}">My Cards</a></li>
     {% else %}
     {% endif %}
 </nav>
