--- a/templates/my_cards.html
+++ b/templates/my_cards.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
-
 {% block container %}
-<h1>Your Card:</h1>
-<section id="packed_card">
+<section id="my_cards">
+    {% for card in cards %}
     <div class="card" id="{{card.rarity}}">
         <h3>{{card.cardname}}</h3>
         <img class="gif" src="{{card.url}}"/>
     </div>
+    {%endfor%}
 </section>
 {% endblock %}
