--- a/templates/showcase.html
+++ b/templates/showcase.html
@@ -9,10 +9,9 @@
             <a href="{{ url_for('library', index = loop.index0 )}}">Select</a>
         </div>
         {% else %}
-        <div class="card">
+        <div class="card" id="{{card.rarity}}">
             <h3>{{card.cardname}}</h3>
             <img class="gif" src="{{card.url}}"/>
-            <h4>{{card.rarity}}</h4>
             <div class ="remove">
                 <a href="{{ url_for('remove', index = loop.index0)}}">Remove</a>
             </div>
