--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,11 @@
   font-weight: normal;
 }
 
+html {
+  background-image: linear-gradient(to bottom right, black ,rgb(49, 52, 58));
+  background-attachment: fixed;
+}
+
 @font-face {
   font-family: customFont;
   src: url(../fonts/rexlia.ttf);
@@ -16,6 +21,7 @@
 }
 
 header {
+  background-color: black;
   display: flex;
   flex-direction: row;
   gap: 10em; /* space between elements in the row */
@@ -23,18 +29,24 @@ header {
   align-items: center; /* align across the flex direction */
 }
 
+
 header,
-/*.refs,*/
 main {
   padding: 2rem;
 }
+refs {
+  margin-left: 5px;
+}
 
 header { /*removed main*/
-  border-bottom: 2px solid;
+  border-bottom: 0.5px solid white;
+  box-shadow: 0px -10px 30px 1px #ffffff;
   margin-bottom: 5px;
 }
 
 main {
+  margin-top: 50px;
+  margin-left: 60px;
 
 }
 
@@ -48,8 +60,8 @@ main {
 }
 
 #welcome {
-  font-size: large;
-
+  font-size: larger;
+  text-align: right;
 }
 
 .flashes p {
@@ -64,55 +76,31 @@ form textarea {
   border: 1px solid gray;
   margin: 10px 0;
 }
-
-.extension {
-  margin-top: 100px;
-}
-
 #pack{
   text-align: center;
   margin: 0px auto;
-  border: 1px solid black;
-  /*width: 100px;
-  height: 200px;*/
-
-  /*position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);*/
-
+  margin-top: 150px;
+  border: 1px solid white;
+  background-color: black;
+  border-radius: 15px;
   width: 25vh;
   height: 50vh;
 }
-
-.collection {
-  margin: 10px 0px 10px 0px;
+#packed_card {
+  margin: auto;
 }
-
-
 .card{
-  /*background-color: black;*/
-  display: flex;
-  flex-direction: column;
-  /*align-items: center;*/
   float: left;
-  /*border: 2px solid rgb(0, 247, 255);
-  box-shadow: 5px white;
-  border-radius: 20px;*/
-  width: 200px;
-  height: 200px;
+  width: 400px;
+  height: 400px;
   background-repeat: no-repeat;
   background-size: contain;
   text-align: center;
   z-index: 100;
   font-style: normal;
-  /*font-size:larger;*/
   font-weight: 400;
-  margin: 50px;
-  /*font-size: 1vh;
-  margin: 5vw;
-  width: 20vw;
-  height: 40vw;*/
+  margin-top: 70px;
+  margin-right: -50px;
 }
 .card h3{
   text-align: left;
@@ -120,7 +108,7 @@ form textarea {
   position: relative;
   font-size: smaller;
   font-family: customFont;
-  top:15%; 
+  top:10%; 
 }
 #legendary{
   background-image:url('../images/legendary.png');
@@ -132,18 +120,7 @@ form textarea {
   background-image:url("../images/epic.png");
 }
 
-/*---------NEW STUFF----------*/
-/*.refs {
-  margin-bottom: 5px;
-}*/
-footer { /*source*/
-  /*height:10vh;*/
- /* position: fixed;
-  bottom: 10vh;*/
-}
-
 body {
-  background-color: rgb(49, 52, 58);
   margin:0px 0px 55px 0px;
   overflow:auto;
 }
@@ -151,7 +128,6 @@ body {
   width:100%;
   padding: 1%;
   margin: 5px;
-  /*background-color: rgb(174, 209, 229);*/
   background-color: black;
   /*----------------------*/
   justify-content: center;
@@ -165,10 +141,7 @@ body {
   text-shadow: 5px 1px 20px rgb(0, 247, 255) ;
   font-size: 3.5vw;
 }
-/*.button/*,header*/ /*{
-  background-color: rgb(174, 209, 229); /*NEW ADDITION*/
-/*}*/
-footer/*,header */{
+footer {
   width: 100%;
   height:8vh;
   display:flex;
@@ -181,7 +154,6 @@ footer/*,header */{
 }
 #navBar {
   width:100%;
-  /*background-color: rgb(138, 167, 184);*/
   background-color:rgb(34, 34, 34);
   position: fixed;
   bottom: 0;
@@ -190,18 +162,25 @@ footer/*,header */{
   color: rgb(248, 248, 248);
   background-image:url("../images/basic.png");
 }
-
-
 .extension {
   margin-top: 50px;
-
-  margin-bottom: 50px;
+  margin-left: 75px;
+  margin-bottom: 500px;
 }
-
 .gif{
   position: relative;
-  top: 20px;
-  width:100px;
-  height:100px;
+  top: 25px;
+  right: 15%;
+  width:250px;
+  height:250px;
   z-index: -1;
+}
+
+input {
+  color: black;
+}
+
+#select {
+  margin-top: 70px;
+  margin-left: 85px;
 }
