--- a/templates/card.html
+++ b/templates/card.html
@@ -3,10 +3,9 @@
 {% block container %}
 <h1>Your Card:</h1>
 <section id="packed_card">
-    <div class="card">
+    <div class="card" id="{{card.rarity}}">
         <h3>{{card.cardname}}</h3>
         <img class="gif" src="{{card.url}}"/>
-        <h4>{{card.rarity}}</h4>
     </div>
 </section>
 {% endblock %}
