styling leaderboard page, centering app to middle of any screen

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,9 +15,12 @@ html {
 }
 
 .container {
-  /*border: 2px solid;*/
-  /*max-width: 1200px;*/
-  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh
+  /*margin: 0 auto;*/
 }
 
 header {
