--- a/templates/my_cards.html
+++ b/templates/my_cards.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block container %}
 <Div class="extension" >
+    <h1>My Cards</h1>
     <section id="my_cards">
         {% for card in cards %}
         <div class="card" id="{{card.rarity}}">
