--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,4 @@
 * {
-  color: white;
   font-family: 'Courier New', Courier, monospace;
   font-weight: normal;
 }
@@ -14,13 +13,8 @@ html {
   src: url(../fonts/rexlia.ttf);
 }
 
-.container {
-  /*border: 2px solid;*/
-  /*max-width: 1200px;*/
-  margin: 0 auto;
-}
-
 header {
+  color: white;
   background-color: black;
   display: flex;
   flex-direction: row;
@@ -29,13 +23,9 @@ header {
   align-items: center; /* align across the flex direction */
 }
 
-
 header,
 main {
   padding: 2rem;
-}
-refs {
-  margin-left: 5px;
 }
 
 header { /*removed main*/
@@ -45,18 +35,22 @@ header { /*removed main*/
 }
 
 main {
+  color: white;
   margin-top: 50px;
   margin-left: 60px;
 
 }
 
-/* NEW STUFF (OTHER PEOPLE)*/
 #appname {
   font-weight: bolder;
   font-size: 50px;
   padding: 10px 10px;
   text-shadow: 1px 1px 10px rgb(0, 247, 255) ;
-  /*box-shadow:0px 0px 10px rgb(0, 247, 255);*/
+}
+
+a {
+  text-decoration: none;
+  color: white;
 }
 
 #welcome {
@@ -76,6 +70,7 @@ form textarea {
   border: 1px solid gray;
   margin: 10px 0;
 }
+
 #pack{
   text-align: center;
   margin: 0px auto;
@@ -86,9 +81,11 @@ form textarea {
   width: 25vh;
   height: 50vh;
 }
+
 #packed_card {
   margin: auto;
 }
+
 .card{
   float: left;
   width: 400px;
@@ -102,6 +99,7 @@ form textarea {
   margin-top: 70px;
   margin-right: -50px;
 }
+
 .card h3{
   text-align: left;
   left: 45px;
@@ -110,6 +108,7 @@ form textarea {
   font-family: customFont;
   top:10%; 
 }
+
 #legendary{
   background-image:url('../images/legendary.png');
   color: rgb(235,132,25);
@@ -124,6 +123,7 @@ body {
   margin:0px 0px 55px 0px;
   overflow:auto;
 }
+
 .button {
   width:100%;
   padding: 1%;
@@ -137,35 +137,32 @@ body {
   /*----------------------*/
   font-family: "Anonymous Pro", monospace;
   color: white;
-  text-decoration: none;
   text-shadow: 5px 1px 20px rgb(0, 247, 255) ;
   font-size: 3.5vw;
 }
+
 footer {
   width: 100%;
   height:8vh;
   display:flex;
 }
-#source {
-  height:10vh;
-  position: fixed;
-  margin-left: 5px;
-  bottom: 0;
-}
+
 #navBar {
   width:100%;
   background-color:rgb(34, 34, 34);
   position: fixed;
   bottom: 0;
 }
+
 #basic{
   color: rgb(248, 248, 248);
   background-image:url("../images/basic.png");
 }
+
 .extension {
   margin-top: 50px;
   margin-left: 75px;
-  margin-bottom: 500px;
+  margin-bottom: 1000px;
 }
 .gif{
   position: relative;
@@ -178,6 +175,10 @@ footer {
 
 input {
   color: black;
+}
+
+.select {
+  align-items: right;
 }
 
 #select {
