--- a/templates/gift.html
+++ b/templates/gift.html
@@ -3,8 +3,8 @@
 <section id="gift">
     <h3>Which Card do you wanna gift?</h3>
     {% for card in cards %}
-    <form method="POST" id= "my_form" action="{{ url_for('gift_post', cardid=card._id, email=email) }}">
-        <a href="javascript:$('#my_form').submit();">
+    <form method="POST" id= "{{card._id}}" action="{{ url_for('gift_post', cardid=card._id, email=email) }}">
+        <a href="javascript:$('#{{card._id}}').submit();">
             <div class="card" id="{{card.rarity}}">
                 <h3>{{card.cardname}}</h3>
                 <img class="gif" src="{{card.url}}"/>
