--- a/templates/all_cards.html
+++ b/templates/all_cards.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block container %}
-    <h1>All Cards available to pack</h1>
+    <h1>All Cards Available to Pack</h1>
     <Div class="extension" >
         <section id="collection">
             {% for card in cards %}
