--- a/templates/card.html
+++ b/templates/card.html
@@ -2,10 +2,10 @@
 
 {% block container %}
 <h1>Your Card:</h1>
-<section id="packed_card">
+<div id="packed_card">
     <div class="card" id="{{card.rarity}}">
         <h3>{{card.cardname}}</h3>
         <img class="gif" src="{{card.url}}"/>
     </div>
-</section>
+</div>
 {% endblock %}
