--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %} 
 
 {% block container %}
-
+<div id="login">
 <h2>Log in</h2>
 <p>
   Don't have an account? <a href="{{ url_for('signup') }}">Sign up</a>!
@@ -14,5 +14,5 @@
   <br />
   <input type="submit" name="submit" value="Log in" />
 </form>
-
+</div>
 {% endblock %}
