--- a/templates/open_pack.html
+++ b/templates/open_pack.html
@@ -4,7 +4,7 @@
     <h1>Open Pack!</h1>
     <section id="openPack">
         <div id = "pack">
-            <h2>Mystery Packs</h2>
+            <h2>Mystery Pack</h2>
             <form action="{{ url_for('card') }}" method="POST">
                 <input id="open" type="submit" value="Open!"/>
             </form>
