--- a/templates/trade_select.html
+++ b/templates/trade_select.html
@@ -10,14 +10,16 @@
 
     <h3>Select a card to request form {{email}} </h3>
     {% for card in cards %}
-    <form method="POST" id= "{{card._id}}" action="{{ url_for('trade_finish', cardid=card._id, email=email, mycardid=mycard._id) }}">
-    <a href="javascript:$('#{{card._id}}').submit();">
-        <div class="card" id="{{card.rarity}}">
-            <h3>{{card.cardname}}</h3>
-            <img class="gif" src="{{card.url}}"/>
-        </div>
-    </a>
-    </form>
+    <div class="extension">
+        <form method="POST" id= "{{card._id}}" action="{{ url_for('trade_finish', cardid=card._id, email=email, mycardid=mycard._id) }}">
+        <a href="javascript:$('#{{card._id}}').submit();">
+            <div class="card" id="{{card.rarity}}">
+                <h3>{{card.cardname}}</h3>
+                <img class="gif" src="{{card.url}}"/>
+            </div>
+        </a>
+        </form>
+    </div>
 
     {%endfor%}
 {% endblock %} 
