--- a/templates/trade_finish.html
+++ b/templates/trade_finish.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %} 
 {% block container %}
-<h3>Made a trade request to {{email}} </h3>
-<h4>Trade {{mycardid}} for  {{cardid}}   </h4>
+<h3 id="success">Succesfully made the trade request to {{email}} </h3>
 {% endblock %}
