--- a/templates/exchange.html
+++ b/templates/exchange.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block container %}
+<section id="exchange">
     <a href="{{url_for('my_requests')}}">My Requests</a>
     <h1>Trade/Gift</h1> 
     <form method="POST", action="{{url_for('exchange')}}">
@@ -19,5 +20,5 @@
         <input type="submit" value="Trade"/>
     </form>
     {% endif %}
-    
+</section>
 {% endblock %}
