--- a/templates/footer_nav.html
+++ b/templates/footer_nav.html
@@ -4,9 +4,9 @@
     <a href="{{ url_for('open_pack')}}" class = "button">Open Pack</a>
     <a href="{{ url_for('all_cards')}}" class = "button">All Cards</a>
     <a href="{{ url_for('exchange')}}" class = "button">Trade/Gift</a>
-    <a href="{{ url_for('showcase')}}" class = "button">Showcase</a>
+    <a href="{{ url_for('showcase')}}" class = "button">Show Case</a>
     <a href="{{ url_for('my_cards')}}" class = "button">My Cards</a>
-    <a href="{{ url_for('leaderboard')}}" class="button">LeaderBoard</a>
+    <a href="{{ url_for('leaderboard')}}" class="button">Leader Board</a>
 
     <!--{% else %}
     {% endif %}-->
