--- a/templates/gift_confirmation.html
+++ b/templates/gift_confirmation.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block container %}
-<section id="gift_confirmation">
-    <h3>Gifted {{cardid}} to {{email}}</h3>
+<section id="success">
+    <h3>Succesfully Gifted to {{email}}</h3>
 </section>
 {% endblock %}
