--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -6,7 +6,7 @@
             <table class="center">
                 <tr>
                     <th>
-                        Top 5 Users
+                        Top 5 Collectors
                     </th>
                 </tr>
                 {% for user in top5 %}
